--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/stanzheng/hrt-bus-text-my-bus",
   "dependencies": {
-    "request": "^2.45.0"
+    "express": "^4.9.7",
+    "request": "^2.45.0",
+    "twilio": "^1.7.0"
   }
 }
