--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/stanzheng/hrt-bus-text-my-bus",
   "dependencies": {
     "express": "^4.9.7",
+    "lodash": "^2.4.1",
+    "moment": "^2.8.3",
     "path": "^0.4.9",
     "request": "^2.45.0",
     "twilio": "^1.7.0"
