--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^2.4.1",
     "moment": "^2.8.3",
     "path": "^0.4.9",
+    "querystring": "^0.2.0",
     "request": "^2.45.0",
     "twilio": "^1.7.0"
   }
