--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/stanzheng/hrt-bus-text-my-bus",
   "dependencies": {
+    "body-parser": "^1.9.0",
     "express": "^4.9.7",
     "lodash": "^2.4.1",
     "moment": "^2.8.3",
