Implemented search by address.  NOTE: address recogniser not implemented.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "path": "^0.4.9",
     "querystring": "^0.2.0",
     "request": "^2.45.0",
-    "twilio": "^1.7.0"
+    "twilio": "^1.7.0",
+    "where": "^0.1.2"
   }
 }
