--- a/package.json
+++ b/package.json
@@ -17,14 +17,13 @@
   },
   "homepage": "https://github.com/stanzheng/hrt-bus-text-my-bus",
   "dependencies": {
-    "bluebird": "^2.3.10",
     "body-parser": "^1.9.0",
     "express": "^4.9.7",
     "lodash": "^2.4.1",
     "moment": "^2.8.3",
     "path": "^0.4.9",
     "querystring": "^0.2.0",
-    "request": "^2.45.0",
+    "supertest": "^0.15.0",
     "twilio": "^1.7.0",
     "where": "^0.1.2"
   },
