--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/stanzheng/hrt-bus-text-my-bus.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "APACHE",
   "bugs": {
     "url": "https://github.com/stanzheng/hrt-bus-text-my-bus/issues"
   },
