--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "path": "^0.4.9",
     "querystring": "^0.2.0",
     "request": "^2.51.0",
+    "should": "^4.4.1",
     "supertest": "^0.15.0",
     "twilio": "^1.7.0",
-    "where": "^0.1.2"
+    "where": "^0.1.2",
+    "xml2js": "^0.4.4"
   },
   "devDependencies": {
     "mocha": "^2.0.1"
